Fix wrap for card contents at safari

--- a/stylesheets/modules/card.css
+++ b/stylesheets/modules/card.css
@@ -2,6 +2,7 @@
 
 .card {
   box-sizing: border-box;
+  overflow: hidden;
   padding: .75em;
   background-image: linear-gradient(180deg, #fcfcfd, #f7f6f8);
   box-shadow: 0 2px 2px rgba(0,0,0, .2);
